--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,16 @@
+4.0.1 (2022.04.12)
+
+* following API changes in Signature Capture app
+
+
 4.0.0 (2022.03.13)
 
-* Update for Android API level 30
+* update for Android API level 30
 
 
 3.0.1 (2021.01.14)
 
-* Layout improvements
+* layout improvements
 
 
 3.0 (2020.12.02)
